--- a/src/style/app.less
+++ b/src/style/app.less
@@ -1,18 +1,8 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Microsoft YaHei', sans-serif;
-}
-
-#root {
-    height: 100%;
-}
-
 .App {
     height: 100%;
     display: flex;
     flex-direction: column;
-    .App-header {
+    .AppHeader {
         height: 60px;
         padding: 10px 24px;
         background: #32323a;
@@ -31,7 +21,7 @@ body {
             }
         }
     }
-    .App-content{
+    .AppContent{
         flex:1;
         display: flex;
         flex-direction: row;
