--- a/src/style/global.css
+++ b/src/style/global.css
@@ -7,3 +7,18 @@ body {
 #root {
     height: 100%;
 }
+.m-list-item{
+    cursor: pointer;
+}
+.m-list-item .m-list-item-a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.m-list-item:hover{
+    background-color: #1890ff;
+    color: #fff;
+}
+.m-list-item:hover .m-list-item-a{
+    color: #fff;
+}
