--- a/src/style/global.css
+++ b/src/style/global.css
@@ -14,8 +14,15 @@ body {
     background-color: #1890ff;
     color: #fff;
 }
-.m-list-item:hover{
-    color: #fff;
+.m-list-item .ant-list-item-action{
+    margin-right: -16px;
+}
+.m-list-item .ant-btn{
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    background: transparent;
+    border: none;
 }
 .m-list-item.active{
     background-color: #1890ff;
@@ -23,4 +30,51 @@ body {
 }
 .hide{
     display: none!important;
+}
+.pull-right{
+    float: right!important;
+}
+.pull-left{
+    float: left!important;
+}
+form .ant-select:only-child, form .ant-cascader-picker:only-child{
+    top: 0;
+}
+.ant-table{
+    font-family: inherit;
+    color: #000;
+}
+.tinyForm .ant-form-item{
+    margin-bottom: 6px;
+}
+.ant-tag-checkable {
+    background-color: #eee;
+    margin: 3px;
+    border: 1px solid #ccc;
+}
+.ant-tag-checkable.ant-tag-checkable-checked {
+    background-color: #1890ff;
+}
+.ant-modal-body{
+    padding:  12px 24px;
+}
+.ant-modal-header{
+    background: #003466;
+}
+.ant-modal-title{
+    color: #fff;
+}
+.ant-modal-close-x{
+    color: #fff;
+}
+.track-list .ant-list-item{
+    align-items: left;
+    flex-direction: column;
+}
+.track-list .ant-list{
+    max-height: 120px;
+    overflow: auto;
+} 
+.track-list .ant-list-item-content{
+    color: #000
 }
