--- a/src/style/global.css
+++ b/src/style/global.css
@@ -78,3 +78,14 @@ form .ant-select:only-child, form .ant-cascader-picker:only-child{
 .track-list .ant-list-item-content{
     color: #000
 }
+.remark-msg {
+    margin: 7px 5px 0 0;
+    width: 6px;
+    height: 6px;
+    float: left;
+    background: red;
+    border-radius: 3px;
+}
+.text-right{
+    text-align: right;
+}
