--- a/src/style/global.css
+++ b/src/style/global.css
@@ -40,6 +40,9 @@ body {
 form .ant-select:only-child, form .ant-cascader-picker:only-child{
     top: 0;
 }
+.ant-form .ant-select:only-child{
+    top: 4px;
+}
 .ant-table{
     font-family: inherit;
     color: #000;
@@ -88,4 +91,21 @@ form .ant-select:only-child, form .ant-cascader-picker:only-child{
 }
 .text-right{
     text-align: right;
+}
+.cblist:after,.cblist:before{
+    content: '';
+    clear: both;
+    display: block;
+    height: 0;
+}
+.cblist .ant-checkbox-wrapper{
+    float: left;
+    min-width: 150px;
+    margin-left: 8px;
+}
+.ant-input-group-addon{
+    cursor: pointer;
+}
+.form-2col .ant-form-item{
+    width: 45%
 }
