--- a/src/style/app.less
+++ b/src/style/app.less
@@ -54,3 +54,19 @@
 .file-upload{
     display: inline-block;
 }
+.ant-table-body{
+    background: #fff;
+}
+.ant-advanced-search-form {
+    padding: 12px 12px 0 12px;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 12px;
+    .ant-form-item{
+        margin-bottom: 12px; 
+    }
+    .ant-select{
+        top:0!important;
+    }
+}
