--- a/src/style/login.less
+++ b/src/style/login.less
@@ -48,8 +48,9 @@
     }
     .ant-input-prefix .anticon{
       font-size: 18px;
-      color: #fff;
+      color: #aaa;
     }
+
     .ant-form-item-control{
       input{
         height: 38px;
@@ -131,5 +132,11 @@
     font-size: 12px;
     color: #fff;
     text-align: center;
+  }
+  .ant-tabs-tab{
+    color: #fff;
+  }
+  .ant-tabs-nav .ant-tabs-tab-active {
+    color: #1890ff;
   }
 }
